--- a/CarMeets Android App/app/build.gradle
+++ b/CarMeets Android App/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     //meetinglijst
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    //meetingitem (afbeeldingen tonen adhv url pad)
+    implementation "com.github.bumptech.glide:glide:4.8.0"
 }
 
 
