--- a/CarMeets Android App/app/build.gradle
+++ b/CarMeets Android App/app/build.gradle
@@ -33,10 +33,10 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 
     //support packages
-    implementation "com.android.support:appcompat-v7:$versions.suport"
+    implementation "com.android.support:appcompat-v7:$versions.support"
     implementation "com.android.support.constraint:constraint-layout:$versions.constraint"
-    implementation "com.android.support:design:$versions.suport"
-    implementation "com.android.support:support-v4:$versions.suport"
+    implementation "com.android.support:design:$versions.support"
+    implementation "com.android.support:support-v4:$versions.support"
 
     //testen
     testImplementation "junit:junit:$versions.junit"
@@ -77,9 +77,6 @@ dependencies {
     // RxJava
     implementation "io.reactivex.rxjava2:rxjava:$versions.rx"
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
-
-
-
 }
 
 
