Gradle voorzien voor Room

--- a/CarMeets Android App/build.gradle
+++ b/CarMeets Android App/build.gradle
@@ -40,7 +40,10 @@ buildscript {
             'rxandroid'     : "2.1.0",
 
             //databinding
-            'databinding'    : "3.1.4"
+            'databinding'    : "3.1.4",
+
+            //room voor lokale persistentie
+            'room'          : "1.1.1"
     ]
     repositories {
         google()
