--- a/CarMeets Android App/app/build.gradle
+++ b/CarMeets Android App/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$versions.room"
     kapt "android.arch.persistence.room:compiler:$versions.room"
     androidTestImplementation "android.arch.persistence.room:testing:$versions.room"
+
+    // Anko voor eenvoudige async taken
+    implementation "org.jetbrains.anko:anko-common:$versions.anko"
 }
 
 
