--- a/CarMeets Android App/build.gradle
+++ b/CarMeets Android App/build.gradle
@@ -12,6 +12,8 @@ buildscript {
             'junit'         : '4.12',
             'runner'        : '1.0.2',
             'espresso'      : '3.0.2',
+            'mockk'         : '1.8.13',
+
 
             //recycler en cardview lijst
             'recyclerview'  : '28.0.0',
